# yad2-apartment-scraper

./: .gitignore  LICENSE  Makefile  README.md  address_matcher.py  build_exe.py  pyproject.toml  requirements.in  requirements.txt
consts/: supported_streets.json.example
src/: app.py  browser.py  main.py  yad2_client.py
src/address/: __init__.py  matcher.py  utils.py
src/cli/: input_handler.py
src/db/: database.py  models.py  saved_items_repository.py  yad2scraper.db
src/email/: __init__.py  init_credentials.py  sender.py
src/mail_sender/: __init__.py  init_credentials.py  sender.py
src/processor/: feed_categorizer.py  feed_processor.py  models.py
src/utils/: console.py  logging_config.py  text_formatter.py
src/yad2/: __init__.py  auth.py  browser.py  client.py  feed_handler.py  feed_parser.py  item_enricher.py  models.py  navigation.py  pagination.py  saved_feed_parser.py  selectors.py
tests/: test_app.py  test_browser.py  test_yad2_client.py
tests/address/: test_matcher.py  test_utils.py
tests/db/: test_saved_items.py
tests/email/: test_sender.py
tests/processor/: test_feed_processor.py
tests/utils/: test_text_formatter.py
tests/yad2/: test_client.py  test_feed_handler.py  test_feed_parser.py  test_item_enricher.py  test_models.py  test_navigation.py  test_saved_feed_parser.py
tests/yad2/fixtures/: sample_feed.html  sample_listing.html
