[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true